@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/googleearth/googleearth-5.1.3535.3218-r1.ebuild,v 1.7 2012/02/05 05:54:06 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/googleearth/googleearth-5.1.3535.3218-r1.ebuild,v 1.8 2012/07/26 15:09:21 kensington Exp $
 
 EAPI=2
 
@@ -36,9 +36,9 @@ RDEPEND="|| ( >=sys-devel/gcc-${GCC_NEEDED}[cxx] >=sys-devel/gcc-${GCC_NEEDED}[-
 		sys-libs/zlib
 		dev-libs/glib:2
 		!qt-bundled? (
-			>=x11-libs/qt-core-4.5.3
-			>=x11-libs/qt-gui-4.5.3
-			>=x11-libs/qt-webkit-4.5.3
+			>=x11-libs/qt-core-4.5.3:4
+			>=x11-libs/qt-gui-4.5.3:4
+			>=x11-libs/qt-webkit-4.5.3:4
 		)
 		net-misc/curl
 		sci-libs/gdal
