@@ -1,6 +1,12 @@
 # ChangeLog for sci-geosciences/googleearth
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/googleearth/ChangeLog,v 1.34 2012/05/09 01:07:18 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/googleearth/ChangeLog,v 1.35 2012/07/26 15:09:21 kensington Exp $
+
+  26 Jul 2012; Michael Palimaka <kensington@gentoo.org>
+  googleearth-5.1.3535.3218-r1.ebuild, googleearth-5.2.1.1588.ebuild,
+  googleearth-6.0.2.2074.ebuild, googleearth-6.0.3.2197.ebuild,
+  googleearth-6.2.2.6613.ebuild:
+  Add missing slot dependencies on Qt.
 
   09 May 2012; Zac Medico <zmedico@gentoo.org> googleearth-6.2.2.6613.ebuild:
   Use QA_PREBUILT="*" instead of RESTRICT=binchecks in order to avoid a QA
@@ -461,4 +467,3 @@
   New Google Earth ebuild for bug 136584, thanks to Natanael Copa
   <natanael.copa@gmail.com> for opening the bug and Tristan Heaven
   <tristanheaven@gmail.com> for the ebuild.
-
